--- a/firebase.json
+++ b/firebase.json
@@ -9,7 +9,7 @@
     "rewrites": [],
     "headers": [
       {
-        "source": "**/*.@(jpg|jpeg|gif|png)",
+        "source": "**/*.@(jpg|jpeg|gif|png|webp)",
         "headers": [
           {
             "key": "Cache-Control",
@@ -18,7 +18,7 @@
         ]
       },
       {
-        "source": "*.js",
+        "source": "**/*.js",
         "headers": [
           {
             "key": "Cache-Control",
@@ -27,7 +27,7 @@
         ]
       },
       {
-        "source": "*.html",
+        "source": "**/*.html",
         "headers": [
           {
             "key": "Cache-Control",
